--- a/cart.html
+++ b/cart.html
@@ -1,112 +1,106 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<center>
-<title>Dunder Mifflin - Cart</title>
+<html>
 <head>
-  <!--Header image. It is the with of the page: 1000px-->
-  <table width = "1000">
-    <tr>
-      <td></td>	
-	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
-	</img></td>
-    </tr>
-    <tr>
-	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
-	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "login.html"><b>
-	LOG IN |</b></a><a href = "cart.html"><img width = "20" 
-	height = "20" src = "Images/cart_icon.png"></a>
-	<!--Code for the Login section in the top left -->
-	</font></body></td>
-    </tr>
-  </table>
+   <title>Shopping Cart</title>
+   <link rel="stylesheet" href="IshaniStyleSheet.css">
+   <link rel="stylesheet" href="StyleSheet.css">
 </head>
 
-<!--Header links-->
-<nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff" 
-	CELLSPACING=0> <tr height ="30">
-            <th width = "10%"><a href = "index.html"><b>HOME
-            </b></a></th>
-            <th width = "10%"><a href = "products.html"><b>PAPER
-            </b></a></th>
-            <th width = "10%"><a href = "about.html"><b>ABOUT
-            </b></a></th>
-            <th width = "10%"><a href = "FAQ.html"><b>FAQ
-            </b></a></th>
-
-            <!---Spacer to put the search bar in a good spot--->
-            <th width = "30%"></th>
-
-
-            <th width = "50%">
-                <form><b>
-            <img src = "Images/search_icon.png" width ="15">
-            <input type = "text" name = "search" 
-		placeholder = "Search" minlength = "1" height ="15">
-                </b></form>
-            </th>
-        </tr>
-
-      </table></font>
-
-
+<body>
+   <header class = "header">
+      <nav class = "nav">
+          <ul class = "navUl">
+         <li class = "logo"><a href="index.html"><img
+         src="Images/Dunder_Mifflin_logo.png" width="100"
+         height="40"></a>
+         </li>
+         <li class = "navLi"><a href="index.html"> HOME</a></li>
+         <li class = "navLi"><a href="products.html"> PAPER</a></li>
+         <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+         <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+         <ul class = "navRight" style = "list-style: none;">
+         <li class = "navLi"><form><input type = "search"
+         placeholder = "Search" style="width: 300px;padding: 12px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
+         #ccc;box-sizing: border-box;"></form></li>
+   
+         <li class = "navLi"><a href = "cart.html"> <img width = "20"
+         height = "20" src = "Images/cart_icon.png"></a></li>
+         <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+         </ul>
+        </ul>
       </nav>
-      <body bgcolor = "bob"><font face = "Arial" color = "black">
-	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
-	    <tr height ="30">
-		<th><br><br>
-			<font size = "6">YOUR CART</font>		
-		</th>
-            </tr>
-	</table></font>
+   </header>
 
-	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">	
-	   <tr height = "30">
-		<th><br><br>
-			<img width = "250" height = "250"
-			src = "Images/PaperCASE.png">
-		</th>
-		<th>
-			<font size = "4">Copy Paper:<br><br> 8.5" x 
-			11" 20Ib. White</font>
-		</th>
-		<th>
-			<font size = "4">Quantity</font><br><br>
-			<input type = "number" name = "quanity"
-			placeholder = "1">
-		</th>
-		<th>
-			<font size = "4">Total Price</font><br><br>
-			<font size = "4">$39.99</font>
-		</th>
-	    </tr>
-	  </table>
-	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">	
-	   <tr>
-		<th><br>
-		  <form>
-			<a href = "paymentinfo.html">
-			<button type = "button">Continue to Payment
-			& Shipping
-			</button></a><br><br><br>
-		  </form>
-		</th>
-	    </tr>
-	  </table>
-	 
-	</table>
-	
-      </body>
+<div class="container">
+    <h1>Shopping Cart</h1>
+    <div class="cart">
+        <div class="products">
 
-      <footer>
+           <div class="product">
+             <img src="Images/paperBlue.png">
+             <div class="product-info">
+                <h3 class="product-name">Blue Paper</h3>
+                <h4 class="product-price">$9.99</h4>
+                <h4 class="product-offer"></h4>
+                <p class="product-quantity">Qnt:<input value="1" name="">
+                <p class="product-remove">
+                   <i class="fa fa-trash" aria-hidden="true"></i>
+                   <span class="remove">Remove</span>
+                </p>
+             </div>
+           </div>
 
-      <table width ="1000px" height = "500px" bgcolor = "#036ba8">
-        <tr>
-          <th>  
-          </th>
-        </tr>
-      </table>
-      </footer>
-</center>
-</html>
+
+<div class="product">
+             <img src="Images/paperYellow.png">
+             <div class="product-info">
+                <h3 class="product-name">Yellow Paper</h3>
+                <h4 class="product-price">$9.99</h4>
+                <h4 class="product-offer"></h4>
+                <p class="product-quantity">Qnt:<input value="1" name="">
+                <p class="product-remove">
+                   <i class="fa fa-trash" aria-hidden="true"></i>
+                   <span class="remove">Remove</span>
+                </p>
+             </div>
+           </div>
+       
+
+<div class="product">
+             <img src="Images/paperPink.png">
+             <div class="product-info">
+                <h3 class="product-name">Pink Paper</h3>
+                <h4 class="product-price">$9.99</h4>
+                <h4 class="product-offer"></h4>
+                <p class="product-quantity">Qnt: <input value="1" name="">
+                <p class="product-remove">
+                   <i class="fa fa-trash" aria-hidden="true"></i>
+                   <span class="remove">Remove</span>
+                </p>
+             </div>
+           </div>
+          </div>
+        <div class="cart-total">
+            <p>
+                <span>Subtotal</span>
+                <span>$29.97</span>
+            </p>
+            <p>
+                <span>Tax (8.5%)</span>
+                <span>$2.55</span>
+            </p>
+            <p>
+               <span>Total</span>
+               <span>$32.52</span>
+           </p>
+            <a href="#">Proceed to Checkout</a>
+    </div>
+  </div>    
+ </div>
+
+
+</body>
+</html> 
+
+
+  
