--- a/paperBlue.html
+++ b/paperBlue.html
@@ -1,135 +1,75 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<center>
-<title>Dunder Mifflin - Paper</title>
-<head>
-  <!--Header image. It is the with of the page: 1000px-->
-  <table width = "1000">
-    <tr>
-      <td></td>
-	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
-	</img></td>
-    </tr>
-    <tr>
-	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
-	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "login.html">
-	LOG IN |</a><a href = "cart.html"><img width = "20"
-	height = "20" src = "Images/cart_icon.png"></a>
-	<!--Code for the Login section in the top right -->
-	</font></body></td>
-    </tr>
-  </table>
-</head>
-
-<!--Header links-->
-<nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff"
-	CELLSPACING=0> <tr height ="30">
-            <th width = "10%"><a href = "index.html"><b>HOME
-            </b></a></th>
-            <th width = "10%"><a href = "products.html"><b>PAPER
-            </b></a></th>
-            <th width = "10%"><a href = "about.html"><b>ABOUT
-            </b></a></th>
-            <th width = "10%"><a href = "FAQ.html"><b>FAQ
-            </b></a></th>
-
-            <!---Spacer to put the search bar in a good spot--->
-            <th width = "30%"></th>
-
-
-            <th width = "50%">
-                <form><b>
-            <img src = "Images/search_icon.png" width ="15">
-            <input type = "text" name = "search"
-		placeholder = "Search" minlength = "1" height ="15">
-                </b></form>
-            </th>
-        </tr>
-
-      </table></font>
-
-
+<html>
+  <title>HOME</title>
+  <head>
+    <link href = "StyleSheet.css" rel = "stylesheet">
+    <link href = "paperStyle.css" rel = "stylesheet">
+  </head>
+  <!--Header links-->
+  <body>
+    <header class = "header">
+      <nav class = "nav">
+         <ul class = "navUl">
+        <li class = "logo"><a href="index.html"><img 
+       src="Images/Dunder_Mifflin_logo.png" width="100" 
+       height="40"></a>
+        </li>
+        <li class = "navLi"><a href="index.html"> HOME</a></li>
+        <li class = "navLi"><a href="products.html"> PAPER</a></li>
+        <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+        <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+   
+        </ul>
       </nav>
-      <body bgcolor = "bob">
-      <table>
-      <font face = "Arial"><table width = "1000" CELLSPACING=0
-		bgcolor = "#ffffff">
-        <tr colspan = "3">
-          <td>
-	    <center>
-	      <fieldset>
-	      <img width="200" height = "200" src = "Images/PaperCASE.png">
-	      </fieldset>
-	    </center>
-          </td>
-	  <td colspan="2">
-	    <h1>Copy Paper: 8.5<q>x11</q> 20lb. Blue</h1>
-	    <img width="25" height = "25" src = "Images/pine_tree.png">
-            <img width="25" height = "25" src = "Images/pine_tree.png">
-            <img width="25" height = "25" src = "Images/pine_tree.png">
-            <img width="25" height = "25" src = "Images/pine_tree.png">
-            <img width="25" height = "25" src = "Images/pine_tree.png"><br><br>
-	    <h3>$49.99</h3>
-	    <button>Add to Cart</button><br>
-	    <ul>
-	      <li>8.5x<q>11</q></li>
-	      <li>20lb</li>
-	      <li>10 Reams</li>
-	      <li>Blue</li>
-	    </ul>
-	    
-            <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin Blue 8.5<q>x11</q> printer<br> and copying paper
-	    works as hard as you do. This dependable, everyday<br> copy paper runs great through all types of equipment.
-	    <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
-	  </td>
-        </tr>
-	<tr colspan="3">
-	  <td>
-            <center>
-	  <h3>Relevant Products</h3>
-	    </center>
-	  </td>
-	</tr>
-	<tr>
-	  <td>
-	   <center>
-	      <fieldset>
-              <a href = "paperRed.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Copy Paper: 8.5<q>x11</q> 20lb. Red<br>$49.99
-	      </fieldset>
-	   </center>
-          </td>
-          <td>
-           <center>
-	      <fieldset>
-              <a href = "paperBlack.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Copy Paper: 8.5<q>x11</q> 20lb. Black<br>$49.99
-	      </fieldset>
-           </center>
-          </td>
-          <td>
-            <center>
-	      <fieldset>
-              <a href = "paperOrange.html"><img width = "150" height = "150" src = "Images/PaperCASE.png"></a>
-              <br>Copy Paper: 8.5<q>x11</q> 20lb. Orange<br>$49.99
-	      </fieldset>
-            </center>
-          </td>
-	</tr>
+   </header>
+    <font face = "Times New Roman">
+      <div class = "grid-container">
+        <div id = "product-image">
+          <img width="400" height = "400" src = "Images/paperBlue.png">
+        </div>
+        <div id = "product-name">
+          <h2>Copy Paper: 8.5<q>x11</q> Blue</h2>
+        </div>
+        <div id = "product-desc">
+          <p id = "paragraph-title"><b>Product Description</b></p>
+          <ul id = "product-desc-list">
+            <li>8.5<q>x11</q></li>
+            <li>2 Reams</li>
+            <li>Blue</li>
+          </ul>
+                <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin Blue 8.5<q>x11</q> printer and copying paper
+          works as hard as you do. This dependable, everyday copy paper runs great through all types of equipment.
+          <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
+        </div>
+        <div class = "product-buy">
+            <b>Price: $9.99</b><br><br> 
+            <input type="button" id="product-button-buy" value="Add to Cart">
+        </div>
+        <div id="similar-products-title">
+          <b>Similar Products</b>
+        </div>
+        <div class = "similar-products"></div>
+          <div id = "product-one">
+            <a href = "paperPurple.html"><img width = "200" height = "200" src = "Images/paperPurple.png"></a>
+            <br><h4>Purple Paper</h4>
+          </div>
+          <div id = "product-two">
+            <a href = "paperRed.html"><img width = "200" height = "200" src = "Images/paperRed.png"></a>
+            <br><h4>Red Paper</h4>
+          </div>
+          <div id = "product-three">
+            <a href = "paperYellow.html"><img width = "200" height = "200" src = "Images/paperYellow.png"></a>
+            <br><h4>Yellow Paper</h4>
+          </div>
+      </div>
+    </font>
 
-      </body>
 
-      <footer>
 
-      <table width ="1000px" height = "750px" height ="500px"
-	bgcolor = "#036ba8">
-        <tr>
-          <th>  <!-- Code -->
-          </th>
-        </tr>
-      </table>
-      </footer>
-</center>
+  </body>
+  <footer class="footer">
+
+  </footer>
+  
 </html>
+
