--- a/paperPink.html
+++ b/paperPink.html
@@ -25,21 +25,19 @@
     <font face = "Times New Roman">
       <div class = "grid-container">
         <div id = "product-image">
-          <img width="400" height = "400" src = "Images/PaperWhite.png">
+          <img width="400" height = "400" src = "Images/paperPink.png">
         </div>
         <div id = "product-name">
-          <h2>Copy Paper: 8.5<q>x11</q> White</h2>
+          <h2>Copy Paper: 8.5<q>x11</q> Pink</h2>
         </div>
         <div id = "product-desc">
           <p id = "paragraph-title"><b>Product Description</b></p>
           <ul id = "product-desc-list">
             <li>8.5<q>x11</q></li>
-            <li>92 TAPPI Brightness</li>
             <li>2 Reams</li>
-            <li>White</li>
+            <li>Pink</li>
           </ul>
-          
-                <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin White 8.5<q>x11</q> printer and copying paper
+                <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin Pink 8.5<q>x11</q> printer and copying paper
           works as hard as you do. This dependable, everyday copy paper runs great through all types of equipment.
           <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
         </div>
@@ -56,12 +54,12 @@
             <br><h4>Purple Paper</h4>
           </div>
           <div id = "product-two">
-            <a href = "paperBlue.html"><img width = "200" height = "200" src = "Images/paperBlue.png"></a>
-            <br><h4>Blue Paper</h4>
+            <a href = "paperRed.html"><img width = "200" height = "200" src = "Images/paperRed.png"></a>
+            <br><h4>Red Paper</h4>
           </div>
           <div id = "product-three">
-            <a href = "paperYellow.html"><img width = "200" height = "200" src = "Images/paperYellow.png"></a>
-            <br><h4>Yellow Paper</h4>
+            <a href = "paperWhite.html"><img width = "200" height = "200" src = "Images/paperWhite.png"></a>
+            <br><h4>White Paper</h4>
           </div>
       </div>
     </font>
@@ -74,5 +72,4 @@
   </footer>
   
 </html>
-
 
