--- a/FAQ.html
+++ b/FAQ.html
@@ -1,113 +1,120 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<center>
-<title>Dunder Mifflin - FAQ</title>
+<html>
 <head>
-  <!--Header image. It is the with of the page: 1000px-->
-  <table width = "1000">
-    <tr>
-      <td></td>	
-	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
-	</img></td>
-    </tr>
-    <tr>
-	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
-	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "login.html"><b>
-	LOG IN |</b></a><a href = "cart.html"><img width = "20" 
-	height = "20" src = "Images/cart_icon.png"></a>
-	<!--Code for the Login section in the top left -->
-	</font></body></td>
-    </tr>
-  </table>
+<title>Dunder Mifflin</title>
+
+<link href = "StyleSheet.css" rel = "stylesheet">
+
 </head>
 
-<!--Header links-->
-<nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff" 
-	CELLSPACING=0> <tr height ="30">
-            <th width = "10%"><a href = "index.html"><b>HOME
-            </b></a></th>
-            <th width = "10%"><a href = "products.html"><b>PAPER
-            </b></a></th>
-            <th width = "10%"><a href = "about.html"><b>ABOUT
-            </b></a></th>
-            <th width = "10%"><a href = "FAQ.html"><b>FAQ
-            </b></a></th>
+<body>
+<header class = "header">
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img 
+		src="Images/Dunder_Mifflin_logo.png" width="100" 
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+	   <ul class = "navRight">
+	   <li class = "navLi"><form><input type = "search"
+		placeholder = "Search" style="width: 300px;padding: 9px 
+		20px;margin: 10px 0;display:inline-block;border: 1px solid
+		#ccc;box-sizing: border-box;"></form></li>
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20" 
+		height = "20" src = "Images/cart_icon.png"></a></li>
+	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+	   </ul>
+  	</ul>
+   </nav>
+</header>
 
-            <!---Spacer to put the search bar in a good spot--->
-            <th width = "30%"></th>
-
-
-            <th width = "50%">
-                <form><b>
-            <img src = "Images/search_icon.png" width ="15">
-            <input type = "text" name = "search" 
-		placeholder = "Search" minlength = "1" height ="15">
-                </b></form>
-            </th>
-        </tr>
-
-      </table></font>
-
-
-      </nav>
-      <body bgcolor = "bob"><font face = "Arial">
-	<table width = "1000" CELLSPACING=0 bgcolor = "#ffffff">
-	<tr height ="30"><th><br><br>
-        	<p><font size = "5" color = "black">FREQUENTLY 
-		ASKED QUESTIONS (FAQ)</font></p>
-        </th></tr>
-
-	<tr height ="30"><th><br><br>
-        	<details>
-		<summary><font size = "5">How do I know which paper 
-		is right for me?</summary>
+<img src="Images/Header_Image.png" width="100%">
+<center>
+	<p class = "title">FREQUENTLY ASKED QUESTIONS (Paper Related)</p>
+	   <details>
+	   	<summary class = "summary">How do I know which paper 
+			is right for me?</summary>
 		
-		<p><font size = "4" color = "black">The specifications 
-		of each paper is stated on each product page <br>with all 
-		the necssary information needed to make an <br>informed 
-		decision on which paper to purchase.</font></p>
-        </details></th></tr>
-
-	<tr height ="30"><th><br><br>
-        	<details>
-		<summary><font size = "5">Will you have more types of
+		<p class = "sumText">The specifications of each paper 
+		is stated on each product page with all the necssary
+		information needed to make an informed decision 
+		on which paper to purchase.</p>
+        </details><br><br>
+	<details>
+		<summary class = "summary">Will you have more types of
 		paper available?</summary>
-
-		<p><font size = "4" color = "black">We strive to have 
+		
+		<p class = "sumText">We strive to have 
 		the widest selection of high quality paper available.
-		<br>If there is a specific type of paper that is not 
-		available now, then we have not found <br>a suitable 
+		If there is a specific type of paper that is not 
+		available now, then we have not found a suitable 
 		supplier that has met our standards for that type of 
-		paper yet.<br> We will add the paper to our lineup of
+		paper yet. We will add the paper to our lineup of
 		quality products as soon as we find a suitable 
-		supplier.</font></p>
-        </details></th></tr>
+		supplier.</p>
+        </details><br><br>
+	<details>
+	   	<summary class = "summary">Do you offer refunds?</summary>
+		
+		<p class = "sumText">Yes, we do indeed offer refunds. 
+		We guarantee the quality of our products, but if 
+		you are not satified with your purchase, email us at 
+		DunderMifflin@mail.com to receive instructions 
+		on how to refund the purchased product.</p>
+        </details><br><br>
+	<details>
+	   	<summary class = "summary">Is the paper you sell eco 
+		friendly?</summary>
+		
+		<p class = "sumText">All paper sold at Dunder Mifflin 
+		is 100% recycled paper and we pride ourselves of this
+		fact.</p>
+        </details><br><br>
 
-	<tr height ="30"><th><br><br>
-        	<details>
-		<summary><font size = "5">Do you offer refunds?
-		</summary>
+	<p class = "title">FREQUENTLY ASKED QUESTIONS (NOT paper related)
+		</p>
+	<details>
+	   	<summary class = "summary">Does Michael G. Scott work 
+		at the company anymore?</summary>
+		
+		<p class = "sumText">Michael G. Scott (Aka Ping, 
+		Michael the Magic, Michael Scarn, Michael Klump, 
+		Date Mike, Mike, Blind Guy McSqueezy, Prison Mike, 
+		Caleb Crawdad, Master of Guidance, Michael Wonka, 
+		Reginald Poofta, Michael Scotch, Spiros, Orville 
+		Tootenbacher, Jesus Christ, Johnny Carson, Michael 
+		J Fox, Mr. Fox, Nicki Minaj, The Incredible Mr. Fox, 
+		Santa Bond, Beyoncé, Captain Bruisin', Michael Jackson, 
+		Ryan's Girlfriend, Dennis the Menace, Eddie Murphy, 
+		Spicoli Guy, MC Mike Scott, Michael Snot, Elton, Mr. 
+		Scott, and Hot Tie Guy) unfortunately resigned in 2011.</p>
+        </details><br><br>
 
-		<p><font size = "4" color = "black">Yes, we do indeed 
-		offer refunds. We guarantee the quality of our products, 
-		<br>but if you are not satified with your purchase, email 
-		us at DunderMifflin@mail.com<br> to receive instructions 
-		on how to refund the purchased product.</font></p>
-        </details><br></th></tr>
-      </table>
-
-      </body>
-
-      <footer>
-
-      <table width ="1000px" height = "500px" bgcolor = "#036ba8">
-        <tr>
-          <th>  
-          </th>
-        </tr>
-      </table>
-      </footer>
+	<details>
+	   	<summary class = "summary">Has the company had any 
+		incidents with fire exits?</summary>
+		
+		<p class = "sumText"> There were a couple incidents 
+		when practicing fire safety drills, but we've solved 
+		most of the problems since then.</p>
+        </details><br><br>
 </center>
+</body>
+
+
+<br></br>
+
+
+<footer class="footer">
+
+</footer>
+
+
+
+
+
 </html>
