--- a/DMTOS.html
+++ b/DMTOS.html
@@ -19,25 +19,27 @@
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+	   <ul class = "navRight" style = "list-style: none;">
+	   <li class = "navLi"><form><input type = "search"
+		placeholder = "Search" style="width: 300px;padding: 9px
+		20px;margin: 10px 0;display:inline-block;border: 1px solid
+		#ccc;box-sizing: border-box;"></form></li>
 
-   	</ul>
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
+		height = "20" src = "Images/cart_icon.png"></a></li>
+	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+	   </ul>
+  	</ul>
    </nav>
 </header>
 
-<img src="Images/Header_Image.png" width="100%">
-
 <center>
-  <div style="width:1000px;height:500px;line-height:3em;overflow:scroll;padding:5px;background-color:#ffffff;color:#000000;scrollbar-base-color:#036ba8;">
-
-      <h2>TERMS OF SERVICE</h2>
-        Buy Paper.
-
-    </div>
+  <br><br><br>
+<img src="Images/Dunder_Mifflin_logo_Black.png" width=200px>
+<h2>TERMS OF SERVICE</h2><br>
+Buy paper.
 </center>
-
-
-
-</div>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 
 
