--- a/cart.html
+++ b/cart.html
@@ -22,7 +22,7 @@
          <li class = "navLi"><form><input type = "search"
          placeholder = "Search" style="width: 300px;padding: 12px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
          #ccc;box-sizing: border-box;"></form></li>
-   
+
          <li class = "navLi"><a href = "cart.html"> <img width = "20"
          height = "20" src = "Images/cart_icon.png"></a></li>
          <li class = "navLi"><a href = "login.html">LOG IN</a></li>
@@ -64,7 +64,7 @@
                 </p>
              </div>
            </div>
-       
+
 
 <div class="product">
              <img src="Images/paperPink.png">
@@ -93,14 +93,11 @@
                <span>Total</span>
                <span>$32.52</span>
            </p>
-            <a href="#">Proceed to Checkout</a>
+            <a href="paymentinfo.html">Proceed to Checkout</a>
     </div>
-  </div>    
+  </div>
  </div>
 
 
 </body>
-</html> 
-
-
-  
+</html>
