--- a/login.html
+++ b/login.html
@@ -19,14 +19,22 @@
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+	   <ul class = "navRight" style = "list-style: none;">
+	   <li class = "navLi"><form><input type = "search"
+		placeholder = "Search" style="width: 300px;padding: 9px
+		20px;margin: 10px 0;display:inline-block;border: 1px solid
+		#ccc;box-sizing: border-box;"></form></li>
 
-   	</ul>
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
+		height = "20" src = "Images/cart_icon.png"></a></li>
+	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+	   </ul>
+  	</ul>
    </nav>
 </header>
 
-<img src="Images/Header_Image.png" width="100%">
-
 <p>
+
   <font face = "Arial"><body><center>
     <br><br><br><br>
     <table cellspacing="0" cellpadding="0" style="text-align:center;background-color:white;border-color:black;border-style:solid;border-width:1;box-shadow: 5px 10px;">
@@ -54,8 +62,8 @@
 
   </table>
   </center></body></font>
-</p>
-</body>
+  </p>
+
 
 
 <br></br>
