--- a/about.html
+++ b/about.html
@@ -1,96 +1,84 @@
 <!DOCTYPE html>
-<html bgcolor ="bob">
-<center>
-<title>Dunder Mifflin - About</title>
+<html>
 <head>
-  <!--Header image. It is the with of the page: 1000px-->
-  <table width = "1000">
-    <tr>
-      <td></td>	
-	<td rowspan = 2><img src = "Images/Header_Image.png" width ="1000">
-	</img></td>
-    </tr>
-    <tr>
-	<body link = "#00253B" alink = "#00253B" vlink = "#00253B">
-	<td colspan = "2" valign = "top" align = "right">
-	<font size = "4"><a href = "login.html"><b>
-	LOG IN |</b></a><a href = "cart.html"><img width = "20" 
-	height = "20" src = "Images/cart_icon.png"></a>
-	<!--Code for the Login section in the top left -->
-	</font></body></td>
-    </tr>
-  </table>
+<title>Dunder Mifflin</title>
+
+<link href = "StyleSheet.css" rel = "stylesheet">
+
 </head>
 
-<!--Header links-->
-<nav margin-top: 0>
-    <font face = "Arial"><table width = "1000" bgcolor = "#ffffff" 
-	CELLSPACING=0> <tr height ="30">
-            <th width = "10%"><a href = "index.html"><b>HOME
-            </b></a></th>
-            <th width = "10%"><a href = "products.html"><b>PAPER
-            </b></a></th>
-            <th width = "10%"><a href = "about.html"><b>ABOUT
-            </b></a></th>
-            <th width = "10%"><a href = "FAQ.html"><b>FAQ
-            </b></a></th>
+<body>
+<header class = "header">
+   <nav class = "nav">
+    	<ul class = "navUl">
+	   <li class = "logo"><a href="index.html"><img
+		src="Images/Dunder_Mifflin_logo.png" width="100"
+		height="40"></a>
+	   </li>
+	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
+	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+	   <ul class = "navRight" style = "list-style: none;">
+	   <li class = "navLi"><form><input type = "search"
+		placeholder = "Search" style="width: 300px;padding: 9px
+		20px;margin: 10px 0;display:inline-block;border: 1px solid
+		#ccc;box-sizing: border-box;"></form></li>
 
-            <!---Spacer to put the search bar in a good spot--->
-            <th width = "30%"></th>
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
+		height = "20" src = "Images/cart_icon.png"></a></li>
+	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+	   </ul>
+  	</ul>
+   </nav>
+</header>
+
+<center>
+<br><br><br>
+
+<font face = "Arial" color = "black">
+<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
+<tr height ="30">
+<th>
+<img src="Images/Dunder_Mifflin_Sign.jpeg" width=350px>
+</th>
+<th width=500px style="text-align:left;">
+<font size = "6"><br>About Us</font><br><br><br>
+<font size = "4">Dunder Mifflin is a mid-cap
+regional paper and office supply distributor with
+an emphasis on servicing small-business clients.
+With a corporate office in New York City, Dunder
+Mifflin has branches in Akron, Ohio; Nashua,
+New Hampshire; Rochester, New York; Scranton,
+Pennsylvania; Syracuse, New York; and Utica, New York.<br><br>
+
+We were founded by Robert Dunder and Robert
+Mifflin in 1949, where they supplied metal
+brackets. After seeing a boom of small businesses in the area, we began selling
+paper and opened several branches across the
+Northeastern United States.<br><br>
+
+In 2009, we unfortunately went bankrupt. It was then that we were adopted
+by Sabre inc. In 2012, Sabre was
+dissolved and the company became Dunder Mifflin
+once again. We are no longer affiliated with Sabre.<br><br><br>
+
+</font></th>
+  </tr>
+</table></font></center>
+
+</body>
 
 
-            <th width = "50%">
-                <form><b>
-            <img src = "Images/search_icon.png" width ="15">
-            <input type = "text" name = "search" 
-		placeholder = "Search" minlength = "1" height ="15">
-                </b></form>
-            </th>
-        </tr>
-
-      </table></font>
+<br></br>
 
 
-      </nav>
-      <body bgcolor = "bob"><font face = "Arial" color = "black">
-	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
-	    <tr height ="30">
-		<th>
-		<font size = "6"><br>About</font><br><br><br>
-		<font size = "4">Dunder Mifflin is a mid-cap 
-		regional paper and office supply distributor with 
-		an <br>emphasis on servicing small-business clients. 
-		With a corporate office in New York City, <br>Dunder 
-		Mifflin has branches in Akron, Ohio; Nashua, 
-		New Hampshire; Rochester, New York;<br> Scranton, 
-		Pennsylvania; Syracuse, New York; and Utica, 
-		New York.<br><br>  
-		
-		The company was founded by Robert Dunder and Robert 
-		Mifflin in 1949, where they supplied<br> metal 
-		brackets. Eventually, the company started selling 
-		paper and opened several<br> branches across the 
-		Northeastern United States.<br><br>
+<footer class="footer">
 
-		In 2009, the company went bankrupt, and was bought 
-		by printer company Sabre.<br> In 2012, Sabre was 
-		dissolved and the company became Dunder Mifflin 
-		once again.<br><br><br>
-		  		
-		</font></th>
-        </tr>
-       </table></font>
-	
-      </body>
+</footer>
 
-      <footer>
 
-      <table width ="1000px" height = "500px" bgcolor = "#036ba8">
-        <tr>
-          <th>  
-          </th>
-        </tr>
-      </table>
-      </footer>
-</center>
+
+
+
 </html>
