--- a/DMTOS.html
+++ b/DMTOS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dunder Mifflin</title>
+<title>Terms of Service</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
