--- a/login.html
+++ b/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dunder Mifflin</title>
+<title>Login</title>
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
