Fixed nav border bug

--- a/FAQ.html
+++ b/FAQ.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Dunder Mifflin</title>
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
