--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>About</title>
-
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 <link href = "StyleSheet.css" rel = "stylesheet">
 
 </head>
