--- a/products.html
+++ b/products.html
@@ -2,6 +2,8 @@
 <html>
   <title>Dunder Mifflin - Products</title>
   <head>
+    <link rel="stylesheet" href="IshaniStyleSheet.css">
+
     <link href = "StyleSheet.css" rel = "stylesheet">
     <!--The style of the page goes here-->
     <style>
