--- a/DMTOS.html
+++ b/DMTOS.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Terms of Service</title>
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
