--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Dunder Mifflin</title>
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
