--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Login</title>
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
