--- a/paperPurple.html
+++ b/paperPurple.html
@@ -2,6 +2,8 @@
 <html>
   <title>HOME</title>
   <head>
+    <link rel="stylesheet" href="IshaniStyleSheet.css">
+
     <link href = "StyleSheet.css" rel = "stylesheet">
     <link href = "paperStyle.css" rel = "stylesheet">
   </head>
