--- a/home.html
+++ b/home.html
@@ -36,23 +36,24 @@
 <img src="Images/Header_Image.png" width="100%">
 <center>
 	<img src = "Images/PaperCASE.png">
-	<br><div style = "font-size: 40px;">Only</div>
-	<br><div style = "font-size: 120px; font-weight: bold;">
+	<br><div style = "font-size: 20px;">Only</div>
+	<br><div style = "font-size: 80px; font-weight: bold;">
 	$39.99</div>
-	<br><div style = "font-size: 60px;">8.5" x 11" 20lb 
+	<br><div style = "font-size: 40px;">8.5" x 11" 20lb 
 	CLEAR paper</div>
 <br><br><br><br><br><br><br><br><br><br>
 <table>
 	<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png" 
-	width = "400" height = "400" style = "padding: 75px 75px; 
+	width = "200" height = "200" style = "padding: 75px 75px; 
 	border-style: ridge; border-color: #3b5a80"></a></tr>
 	<tr><a href="paperPink.html"><img src = "Images/paperPink.png" 
-	width = "400" height = "400" style = "padding: 75px 75px;
+	width = "200" height = "200" style = "padding: 75px 75px;
 	border-style: ridge; border-color: #3b5a80"></a></tr>
-	<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		width = "400" height = "400" style = "padding: 75px 75px;
+	<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		
+	width = "200" height = "200" style = "padding: 75px 75px;
 	border-style: ridge; border-color: #3b5a80"></a></tr>
 	<tr><a href="paperRed.html"><img src = "Images/paperRed.webp" 
-	width = "400" height = "400" style = "padding: 75px 75px;
+	width = "200" height = "200" style = "padding: 75px 75px;
 	border-style: ridge; border-color: #3b5a80"></a></tr>
 </table>
 </center>
