--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,6 @@
 <html>
 <head>
 <title>Dunder Mifflin</title>
-<link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
 
@@ -12,98 +11,103 @@
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
-	   <li class = "logo"><a href="index.html"><img 
-		src="Images/Dunder_Mifflin_logo.png" width="100" 
+	   <li class = "logo"><a href="index.html"><img
+		src="Images/Dunder_Mifflin_logo.png" width="100"
 		height="40"></a>
 	   </li>
 	   <li class = "navLi"><a href="index.html"> HOME</a></li>
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-	   <ul class = "navRight">
+	   <ul class = "navRight" style = "list-style: none;">
 	   <li class = "navLi"><form><input type = "search"
-		placeholder = "Search" style="width: 300px;padding: 9px 
+		placeholder = "Search" style="width: 300px;padding: 9px
 		20px;margin: 10px 0;display:inline-block;border: 1px solid
 		#ccc;box-sizing: border-box;"></form></li>
-	   <li class = "navLi"><a href = "cart.html"> <img width = "20" 
+
+	   <li class = "navLi"><a href = "cart.html"> <img width = "20"
 		height = "20" src = "Images/cart_icon.png"></a></li>
 	   <li class = "navLi"><a href = "login.html">LOG IN</a></li>
 	   </ul>
   	</ul>
    </nav>
 </header>
+<p>
 
-<img src="Images/Header_Image.png" width="100%">
-<center>
-	<p class = "title">FREQUENTLY ASKED QUESTIONS (Paper Related)</p>
-	   <details>
-	   	<summary class = "summary">How do I know which paper 
-			is right for me?</summary>
-		
-		<p class = "sumText">The specifications of each paper 
-		is stated on each product page with all the necssary
-		information needed to make an informed decision 
-		on which paper to purchase.</p>
-        </details><br><br>
-	<details>
-		<summary class = "summary">Will you have more types of
-		paper available?</summary>
-		
-		<p class = "sumText">We strive to have 
-		the widest selection of high quality paper available.
-		If there is a specific type of paper that is not 
-		available now, then we have not found a suitable 
-		supplier that has met our standards for that type of 
-		paper yet. We will add the paper to our lineup of
-		quality products as soon as we find a suitable 
-		supplier.</p>
-        </details><br><br>
-	<details>
-	   	<summary class = "summary">Do you offer refunds?</summary>
-		
-		<p class = "sumText">Yes, we do indeed offer refunds. 
-		We guarantee the quality of our products, but if 
-		you are not satified with your purchase, email us at 
-		DunderMifflin@mail.com to receive instructions 
-		on how to refund the purchased product.</p>
-        </details><br><br>
-	<details>
-	   	<summary class = "summary">Is the paper you sell eco 
-		friendly?</summary>
-		
-		<p class = "sumText">All paper sold at Dunder Mifflin 
-		is 100% recycled paper and we pride ourselves of this
-		fact.</p>
-        </details><br><br>
 
-	<p class = "title">FREQUENTLY ASKED QUESTIONS (NOT paper related)
-		</p>
-	<details>
-	   	<summary class = "summary">Does Michael G. Scott work 
-		at the company anymore?</summary>
-		
-		<p class = "sumText">Michael G. Scott (Aka Ping, 
-		Michael the Magic, Michael Scarn, Michael Klump, 
-		Date Mike, Mike, Blind Guy McSqueezy, Prison Mike, 
-		Caleb Crawdad, Master of Guidance, Michael Wonka, 
-		Reginald Poofta, Michael Scotch, Spiros, Orville 
-		Tootenbacher, Jesus Christ, Johnny Carson, Michael 
-		J Fox, Mr. Fox, Nicki Minaj, The Incredible Mr. Fox, 
-		Santa Bond, Beyoncé, Captain Bruisin', Michael Jackson, 
-		Ryan's Girlfriend, Dennis the Menace, Eddie Murphy, 
-		Spicoli Guy, MC Mike Scott, Michael Snot, Elton, Mr. 
-		Scott, and Hot Tie Guy) unfortunately resigned in 2011.</p>
-        </details><br><br>
+  <center>
+    <br><br><br>
+  	<p class = "title">FREQUENTLY ASKED QUESTIONS (Paper Related)</p>
+  	   <details>
+  	   	<summary class = "summary">How do I know which paper
+  			is right for me?</summary>
 
-	<details>
-	   	<summary class = "summary">Has the company had any 
-		incidents with fire exits?</summary>
-		
-		<p class = "sumText"> There were a couple incidents 
-		when practicing fire safety drills, but we've solved 
-		most of the problems since then.</p>
-        </details><br><br>
-</center>
+  		<p class = "sumText">The specifications of each paper
+  		is stated on each product page with all the necssary
+  		information needed to make an informed decision
+  		on which paper to purchase.</p>
+          </details><br><br>
+  	<details>
+  		<summary class = "summary">Will you have more types of
+  		paper available?</summary>
+
+  		<p class = "sumText">We strive to have
+  		the widest selection of high quality paper available.
+  		If there is a specific type of paper that is not
+  		available now, then we have not found a suitable
+  		supplier that has met our standards for that type of
+  		paper yet. We will add the paper to our lineup of
+  		quality products as soon as we find a suitable
+  		supplier.</p>
+          </details><br><br>
+  	<details>
+  	   	<summary class = "summary">Do you offer refunds?</summary>
+
+  		<p class = "sumText">Yes, we do indeed offer refunds.
+  		We guarantee the quality of our products, but if
+  		you are not satified with your purchase, email us at
+  		DunderMifflin@mail.com to receive instructions
+  		on how to refund the purchased product.</p>
+          </details><br><br>
+  	<details>
+  	   	<summary class = "summary">Is the paper you sell eco
+  		friendly?</summary>
+
+  		<p class = "sumText">All paper sold at Dunder Mifflin
+  		is 100% recycled paper and we pride ourselves of this
+  		fact.</p>
+          </details><br><br>
+
+  	<p class = "title">FREQUENTLY ASKED QUESTIONS (NOT paper related)
+  		</p>
+  	<details>
+  	   	<summary class = "summary">Does Michael G. Scott work
+  		at the company anymore?</summary>
+
+  		<p class = "sumText">Michael G. Scott (Aka Ping,
+  		Michael the Magic, Michael Scarn, Michael Klump,
+  		Date Mike, Mike, Blind Guy McSqueezy, Prison Mike,
+  		Caleb Crawdad, Master of Guidance, Michael Wonka,
+  		Reginald Poofta, Michael Scotch, Spiros, Orville
+  		Tootenbacher, Jesus Christ, Johnny Carson, Michael
+  		J Fox, Mr. Fox, Nicki Minaj, The Incredible Mr. Fox,
+  		Santa Bond, Beyoncé, Captain Bruisin', Michael Jackson,
+  		Ryan's Girlfriend, Dennis the Menace, Eddie Murphy,
+  		Spicoli Guy, MC Mike Scott, Michael Snot, Elton, Mr.
+  		Scott, and Hot Tie Guy) unfortunately resigned in 2011.</p>
+          </details><br><br>
+
+  	<details>
+  	   	<summary class = "summary">Has the company had any
+  		incidents with fire exits?</summary>
+
+  		<p class = "sumText"> There were a couple incidents
+  		when practicing fire safety drills, but we've solved
+  		most of the problems since then.</p>
+          </details><br><br><br>
+  </center>
+
+</p>
 </body>
 
 
