Changed index to home

--- a/FAQ.html
+++ b/FAQ.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body>
+<body><font face = "Arial">
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
@@ -108,7 +108,7 @@
   </center>
 
 </p>
-</body>
+</font></body>
 
 
 <br></br>
