--- a/login.html
+++ b/login.html
@@ -12,11 +12,11 @@
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
-	   <li class = "logo"><a href="index.html"><img
+	   <li class = "logo"><a href="home.html"><img
 		src="Images/Dunder_Mifflin_logo.png" width="100"
 		height="40"></a>
 	   </li>
-	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="home.html"> HOME</a></li>
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
