--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
 	<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		
 	width = "200" height = "200" style = "padding: 75px 75px;
 	border-style: ridge; border-color: #3b5a80"></a></tr>
-	<tr><a href="paperRed.html"><img src = "Images/paperRed.webp" 
+	<tr><a href="paperRed.html"><img src = "Images/paperRed.png" 
 	width = "200" height = "200" style = "padding: 75px 75px;
 	border-style: ridge; border-color: #3b5a80"></a></tr>
 </table>
