--- a/home.html
+++ b/home.html
@@ -12,11 +12,11 @@
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
-	   <li class = "logo"><a href="index.html"><img
+	   <li class = "logo"><a href="home.html"><img
 		src="Images/Dunder_Mifflin_logo.png" width="100"
 		height="40"></a>
 	   </li>
-	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="home.html"> HOME</a></li>
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
@@ -33,28 +33,43 @@
    </nav>
 </header>
 
-<img src="Images/Header_Image.png" width="120%">
+<img src="Images/Header_Image.png" width="100%">
 <center>
-	<img src = "Images/PaperCASE.png">
+
+	<table>
+		<tr>
+	<td>
+		
+		<img src = "Images/PaperCASE.png" width=500px>
+
+	</td>
+
+	<td style="padding-left: 50px">
 	<br><div style = "font-size: 20px;">Only</div>
 	<br><div style = "font-size: 80px; font-weight: bold;">
 	$39.99</div>
 	<br><div style = "font-size: 40px;">8.5" x 11" 20lb 
 	CLEAR paper</div>
-<br><br><br><br><br><br><br><br><br><br>
+</td>
+
+
+</tr>
+</table>
+
+<br><br><br>
+<h2>FEATURED PRODUCTS</h2>
+<br><br>
 <table>
-	<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png" 
-	width = "200" height = "200" style = "padding: 75px 75px; 
-	border-style: ridge; border-color: #3b5a80"></a></tr>
-	<tr><a href="paperPink.html"><img src = "Images/paperPink.png" 
-	width = "200" height = "200" style = "padding: 75px 75px;
-	border-style: ridge; border-color: #3b5a80"></a></tr>
-	<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		
-	width = "200" height = "200" style = "padding: 75px 75px;
-	border-style: ridge; border-color: #3b5a80"></a></tr>
-	<tr><a href="paperRed.html"><img src = "Images/paperRed.png" 
-	width = "200" height = "200" style = "padding: 75px 75px;
-	border-style: ridge; border-color: #3b5a80"></a></tr>
+	<td>
+		<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png" 
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperPink.html"><img src = "Images/paperPink.png" 
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		
+	width = "200" height = "200"></a></tr>
+		<tr><a href="paperRed.html"><img src = "Images/paperRed.png" 
+	width = "200" height = "200"></a></tr>
+	</td>
 </table>
 </center>
 </body>
