Just made it look nicer

--- a/products.html
+++ b/products.html
@@ -147,8 +147,10 @@
    	</ul>
    </nav>
 </header>
-      <font face = "Times New Roman">
-        <h1 id = "products-title">Products</h1>
+      <font face = "Times New Roman"><br><br><br>
+        <center><img src="Images/Dunder_Mifflin_logo_Black.png" width=200px></center><br><br>
+
+        <h1 id = "products-title"></h1>
         <div class="grid-container">
           <div class = "product-selection">
               <div class = "product-selection-container">
