Minor changes (just makin it look nicer(

--- a/FAQ.html
+++ b/FAQ.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Dunder Mifflin</title>
-
+<link rel="stylesheet" href="IshaniStyleSheet.css">
 <link href = "StyleSheet.css" rel = "stylesheet">
 
 </head>
@@ -34,10 +34,11 @@
 </header>
 <p>
 
+	<br><br> <br> <center><img src="Images/Dunder_Mifflin_logo_Black.png" width=200px></center><br>
 
   <center>
-    <br><br><br>
-  	<p class = "title">FREQUENTLY ASKED QUESTIONS (Paper Related)</p>
+    <br>
+  	<h2>FREQUENTLY ASKED QUESTIONS (Paper Related)</h2>
   	   <details>
   	   	<summary class = "summary">How do I know which paper
   			is right for me?</summary>
@@ -78,8 +79,8 @@
   		fact.</p>
           </details><br><br>
 
-  	<p class = "title">FREQUENTLY ASKED QUESTIONS (NOT paper related)
-  		</p>
+  	<h2>FREQUENTLY ASKED QUESTIONS (NOT paper related)
+	  </h2>
   	<details>
   	   	<summary class = "summary">Does Michael G. Scott work
   		at the company anymore?</summary>
