--- a/about.html
+++ b/about.html
@@ -33,8 +33,10 @@
    </nav>
 </header>
 
+<br><br><center><img src="Images/Dunder_Mifflin_logo_Black.png" width=200px></center><br>
+
 <center>
-<br><br><br>
+
 
 <font face = "Arial" color = "black">
 <table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
