--- a/FAQ.html
+++ b/FAQ.html
@@ -38,13 +38,13 @@
 
   <center>
     <br>
-  	<h2>FREQUENTLY ASKED QUESTIONS (Paper Related)</h2>
+  	<h2>FREQUENTLY ASKED QUESTIONS (Paper Related)</h2><br>
   	   <details>
   	   	<summary class = "summary">How do I know which paper
   			is right for me?</summary>
 
   		<p class = "sumText">The specifications of each paper
-  		is stated on each product page with all the necssary
+  		is stated on each product page, with all the necssary
   		information needed to make an informed decision
   		on which paper to purchase.</p>
           </details><br><br>
@@ -56,8 +56,8 @@
   		the widest selection of high quality paper available.
   		If there is a specific type of paper that is not
   		available now, then we have not found a suitable
-  		supplier that has met our standards for that type of
-  		paper yet. We will add the paper to our lineup of
+  		supplier that has met our standards. We will add 
+		the paper to our lineup of
   		quality products as soon as we find a suitable
   		supplier.</p>
           </details><br><br>
@@ -67,23 +67,21 @@
   		<p class = "sumText">Yes, we do indeed offer refunds.
   		We guarantee the quality of our products, but if
   		you are not satified with your purchase, email us at
-  		DunderMifflin@mail.com to receive instructions
+  		CreedBratton@DunderMifflin.com to receive instructions
   		on how to refund the purchased product.</p>
           </details><br><br>
   	<details>
-  	   	<summary class = "summary">Is the paper you sell eco
-  		friendly?</summary>
+  	   	<summary class = "summary">Is the paper you sell eco-friendly?</summary>
 
   		<p class = "sumText">All paper sold at Dunder Mifflin
-  		is 100% recycled paper and we pride ourselves of this
+  		is 100% recycled, and we pride ourselves of this
   		fact.</p>
           </details><br><br>
 
   	<h2>FREQUENTLY ASKED QUESTIONS (NOT paper related)
-	  </h2>
+	  </h2><br>
   	<details>
-  	   	<summary class = "summary">Does Michael G. Scott work
-  		at the company anymore?</summary>
+  	   	<summary class = "summary">Does Michael G. Scott still work  at Dunder Mifflin?</summary>
 
   		<p class = "sumText">Michael G. Scott (Aka Ping,
   		Michael the Magic, Michael Scarn, Michael Klump,
@@ -95,16 +93,15 @@
   		Santa Bond, Beyoncé, Captain Bruisin', Michael Jackson,
   		Ryan's Girlfriend, Dennis the Menace, Eddie Murphy,
   		Spicoli Guy, MC Mike Scott, Michael Snot, Elton, Mr.
-  		Scott, and Hot Tie Guy) unfortunately resigned in 2011.</p>
+  		Scott, and Hot Tie Guy) unfortunately resigned in 2011. 
+		Our Scranton branch is now bring managed by Dwight Schrute.</p>
           </details><br><br>
 
   	<details>
   	   	<summary class = "summary">Has the company had any
   		incidents with fire exits?</summary>
 
-  		<p class = "sumText"> There were a couple incidents
-  		when practicing fire safety drills, but we've solved
-  		most of the problems since then.</p>
+  		<p class = "sumText"> In the past, we have had issues with fire safety.  However, we have since stripped our fire safety manager of his title.</p>
           </details><br><br><br>
   </center>
 
