--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -25,7 +25,6 @@
    </nav>
 </header>
 
-<img src="Images/Header_Image.png" width="100%">
 
 <p>
   <font face = "Arial"><body><center>
@@ -132,7 +131,7 @@
     </tr>
 
   </table>
-  </center></body></font>
+  </center></body></font><br><br><br>
 </p>
 </body>
 
