--- a/FAQ.html
+++ b/FAQ.html
@@ -81,7 +81,7 @@
   	<h2>FREQUENTLY ASKED QUESTIONS (NOT paper related)
 	  </h2><br>
   	<details>
-  	   	<summary class = "summary">Does Michael G. Scott still work  at Dunder Mifflin?</summary>
+  	   	<summary class = "summary">Does Michael Scott still work  at Dunder Mifflin?</summary>
 
   		<p class = "sumText">Michael G. Scott (Aka Ping,
   		Michael the Magic, Michael Scarn, Michael Klump,
