--- a/products.html
+++ b/products.html
@@ -134,19 +134,29 @@
   <!--Navigation links-->
   <body>
     <header class = "header">
-   <nav class = "nav">
-    	<ul class = "navUl">
-	   <li class = "logo"><a href="home.html"><img 
-		src="Images/Dunder_Mifflin_logo.png" width="100" 
-		height="40"></a>
-	   </li>
-	   <li class = "navLi"><a href="home.html"> HOME</a></li>
-	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
-	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
-	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-   	</ul>
-   </nav>
-</header>
+      <nav class = "nav">
+         <ul class = "navUl">
+        <li class = "logo"><a href="home.html"><img
+       src="Images/Dunder_Mifflin_logo.png" width="100"
+       height="40"></a>
+        </li>
+        <li class = "navLi"><a href="home.html"> HOME</a></li>
+        <li class = "navLi"><a href="products.html"> PAPER</a></li>
+        <li class = "navLi"><a href="about.html"> ABOUT</a></li>
+        <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
+        <ul class = "navRight" style = "list-style: none;">
+        <li class = "navLi"><form><input type = "search"
+       placeholder = "Search" style="width: 300px;padding: 9px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
+       #ccc;box-sizing: border-box;"></form></li>
+   
+        <li class = "navLi"><a href = "cart.html"> <img width = "20"
+       height = "20" src = "Images/cart_icon.png"></a></li>
+        <li class = "navLi"><a href = "login.html">LOG IN</a></li>
+        </ul>
+       </ul>
+      </nav>
+   </header>
+   
       <font face = "Times New Roman"><br><br><br>
         <center><img src="Images/Dunder_Mifflin_logo_Black.png" width=200px></center><br><br>
 
