Changed Titles, fixed input errors, general changes

--- a/DMTOS.html
+++ b/DMTOS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Terms of Service</title>
+<title>Terms of Service | DUNDER MIFFLIN</title>
 <link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
