--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-   <title>Cart</title>
+   <title>Cart | DUNDER MIFFLIN</title>
    <link rel="stylesheet" href="IshaniStyleSheet.css">
    <link rel="stylesheet" href="StyleSheet.css">
 </head>
