--- a/home.html
+++ b/home.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dunder Mifflin</title>
+<title>HOME | DUNDER MIFFLIN</title>
 <link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
@@ -39,7 +39,7 @@
 	<table>
 		<tr>
 	<td>
-		
+
 		<img src = "Images/PaperCASE.png" width=500px>
 
 	</td>
@@ -48,7 +48,7 @@
 	<br><div style = "font-size: 20px;">Only</div>
 	<br><div style = "font-size: 80px; font-weight: bold;">
 	$39.99</div>
-	<br><div style = "font-size: 40px;">8.5" x 11" 20lb 
+	<br><div style = "font-size: 40px;">8.5" x 11" 20lb
 	CLEAR paper</div>
 </td>
 
@@ -61,13 +61,13 @@
 <br><br>
 <table>
 	<td>
-		<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png" 
+		<tr><a href="paperBlue.html"><img src = "Images/paperBlue.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperPink.html"><img src = "Images/paperPink.png" 
+		<tr><a href="paperPink.html"><img src = "Images/paperPink.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png" 		
+		<tr><a href="paperYellow.html"><img src = "Images/paperYellow.png"
 	width = "200" height = "200"></a></tr>
-		<tr><a href="paperRed.html"><img src = "Images/paperRed.png" 
+		<tr><a href="paperRed.html"><img src = "Images/paperRed.png"
 	width = "200" height = "200"></a></tr>
 	</td>
 </table>
@@ -87,4 +87,3 @@
 
 
 </html>
-
