--- a/paperTemplate.html
+++ b/paperTemplate.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>HOME</title>
+  <title>Paper | DUNDER MIFFLIN</title>
   <head>
     <link rel="stylesheet" href="IshaniStyleSheet.css">
 
@@ -12,15 +12,15 @@
     <header class = "header">
       <nav class = "nav">
          <ul class = "navUl">
-        <li class = "logo"><a href="home.html"><img 
-       src="Images/Dunder_Mifflin_logo.png" width="100" 
+        <li class = "logo"><a href="home.html"><img
+       src="Images/Dunder_Mifflin_logo.png" width="100"
        height="40"></a>
         </li>
         <li class = "navLi"><a href="home.html"> HOME</a></li>
         <li class = "navLi"><a href="products.html"> PAPER</a></li>
         <li class = "navLi"><a href="about.html"> ABOUT</a></li>
         <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
-   
+
         </ul>
       </nav>
    </header>
@@ -41,13 +41,13 @@
             <li>10 Reams</li>
             <li>White</li>
           </ul>
-          
+
                 <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin White 8.5<q>x11</q> printer and copying paper
           works as hard as you do. This dependable, everyday copy paper runs great through all types of equipment.
           <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
         </div>
         <div class = "product-buy">
-            <b>Price: $39.99</b><br><br> 
+            <b>Price: $39.99</b><br><br>
             <input type="button" id="product-button-buy" value="Add to Cart">
         </div>
         <div id="similar-products-title">
@@ -72,5 +72,5 @@
   <footer class="footer">
 
   </footer>
-  
+
 </html>
