--- a/paperYellow.html
+++ b/paperYellow.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <title>HOME</title>
+  <title>Copy Paper: 8.5x11 Yellow | DUNDER MIFFLIN</title>
   <head>
     <link rel="stylesheet" href="IshaniStyleSheet.css">
 
@@ -24,7 +24,7 @@
         <li class = "navLi"><form><input type = "search"
        placeholder = "Search" style="width: 300px;padding: 9px 			20px;margin: 10px 0;display:inline-block;border: 1px solid
        #ccc;box-sizing: border-box;"></form></li>
-   
+
         <li class = "navLi"><a href = "cart.html"> <img width = "20"
        height = "20" src = "Images/cart_icon.png"></a></li>
         <li class = "navLi"><a href = "login.html">LOG IN</a></li>
@@ -32,7 +32,7 @@
        </ul>
       </nav>
    </header>
-   
+
     <font face = "Times New Roman">
       <div class = "grid-container">
         <div id = "product-image">
@@ -48,13 +48,13 @@
             <li>2 Reams</li>
             <li>Yellow</li>
           </ul>
-          
+
                 <p><b>DUNDER MIFFLIN COPY PAPER</b>:Dunder Mifflin Yellow 8.5<q>x11</q> printer and copying paper
           works as hard as you do. This dependable, everyday copy paper runs great through all types of equipment.
           <br><b>100% Recycled Paper!</b><br><b>99.92% Jam Free-Guarantee!</b></p>
         </div>
         <div class = "product-buy">
-            <b>Price: $9.99</b><br><br> 
+            <b>Price: $9.99</b><br><br>
             <input type="button" id="product-button-buy" value="Add to Cart">
         </div>
         <div id="similar-products-title">
@@ -82,6 +82,5 @@
   <footer class="footer">
 
   </footer>
-  
-</html>
 
+</html>
