--- a/register.html
+++ b/register.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Register</title>
+<title>Register | DUNDER MIFFLIN</title>
 <link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
@@ -51,8 +51,8 @@
         <input type="text" name="user" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
         <input type="text" name="email" placeholder="Email" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
-        <input type="password" name="Password" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
-        <input type="password" name="ConfPassword" placeholder="Username" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
+        <input type="password" name="Password" placeholder="Password" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;">&nbsp&nbsp
+        <input type="password" name="ConfPassword" placeholder="Confirm Password" required style="width: 200px;padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;box-sizing: border-box;"><br>
 
         <input type="checkbox" id="TOS" name="agree" value="TOS" required>
         <label for="TOS"> I agree to the <a href="DMTOS.html">TERMS OF SERVICE</a></label><br><br>
