--- a/FAQ.html
+++ b/FAQ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dunder Mifflin</title>
+<title>FAQ | DUNDER MIFFLIN</title>
 <link rel="stylesheet" href="IshaniStyleSheet.css">
 <link href = "StyleSheet.css" rel = "stylesheet">
 
@@ -11,11 +11,11 @@
 <header class = "header">
    <nav class = "nav">
     	<ul class = "navUl">
-	   <li class = "logo"><a href="index.html"><img
+	   <li class = "logo"><a href="home.html"><img
 		src="Images/Dunder_Mifflin_logo.png" width="100"
 		height="40"></a>
 	   </li>
-	   <li class = "navLi"><a href="index.html"> HOME</a></li>
+	   <li class = "navLi"><a href="home.html"> HOME</a></li>
 	   <li class = "navLi"><a href="products.html"> PAPER</a></li>
 	   <li class = "navLi"><a href="about.html"> ABOUT</a></li>
 	   <li class = "navLi"><a href="FAQ.html"> FAQ</a></li>
@@ -56,7 +56,7 @@
   		the widest selection of high quality paper available.
   		If there is a specific type of paper that is not
   		available now, then we have not found a suitable
-  		supplier that has met our standards. We will add 
+  		supplier that has met our standards. We will add
 		the paper to our lineup of
   		quality products as soon as we find a suitable
   		supplier.</p>
@@ -93,7 +93,7 @@
   		Santa Bond, Beyoncé, Captain Bruisin', Michael Jackson,
   		Ryan's Girlfriend, Dennis the Menace, Eddie Murphy,
   		Spicoli Guy, MC Mike Scott, Michael Snot, Elton, Mr.
-  		Scott, and Hot Tie Guy) unfortunately resigned in 2011. 
+  		Scott, and Hot Tie Guy) unfortunately resigned in 2011.
 		Our Scranton branch is now bring managed by Dwight Schrute.</p>
           </details><br><br>
 
