--- a/paymentinfo.html
+++ b/paymentinfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Payment Info</title>
+<title>Payment Info | DUNDER MIFFLIN</title>
 <link rel="stylesheet" href="IshaniStyleSheet.css">
 
 <link href = "StyleSheet.css" rel = "stylesheet">
